# types-reader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yaml
src/: attributes.rs  enum_case.rs  lib.rs  single_value_tuple_struct.rs  struct_property.rs  type_name.rs  value_single_tuple_struct.rs
src/attribute_params/: attr_params.rs  attr_parse_utils.rs  macro_params_parser.rs  mod.rs  param_value.rs  src_string.rs
src/enum_case/: enum_case.rs  enum_model.rs  mod.rs
src/params_iterator/: complex_attr_params.rs  mod.rs  objects_iterator.rs  objects_iterator_shared.rs  param_content.rs  params_iterator.rs  utils.rs
src/params_list/: bool_value.rs  double_value.rs  mod.rs  number_value.rs  object_value.rs  objects_list.rs  param_value.rs  params_list.rs  single_value_as_ident.rs  string_value.rs  token_object_mappers.rs  tokens_object.rs  value_as_ident.rs  vec_of_values.rs
src/params_list_as_tokens/: mod.rs  objects_list.rs  param_value_as_token.rs  params_list_as_tokens.rs
src/property_type/: property_type.rs  utils.rs
src/token_stream_utils/: insert_token_before_sequence.rs  mod.rs
src/tokens_iterator/: mod.rs  next_token.rs  tokens_iterator.rs  tokens_reader.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/test_attributes/: attributes_from_external_crate.rs  doc_comments.rs  mod.rs
tests/src/test_enums/: enum_different_types.rs  enum_with_field_as_ident.rs  maybe_empty_value.rs  mod.rs  test_default_case.rs
tests/src/test_from_real_life/: default_as_object_value.rs  default_as_optional_object_value.rs  default_as_tokens_object.rs  http_action_result.rs  mod.rs  single_or_named_and_ident.rs
tests/src/test_model_with_string_or_array/: mod.rs  model_with_string_or_array.rs  model_with_string_or_array_opt.rs
types-reader/: Cargo.toml
types-reader-core/: Cargo.toml
types-reader-core/src/: any_value.rs  attributes.rs  lib.rs  maybe_empty_value.rs  struct_name.rs  struct_property.rs  structure_schema.rs  type_name.rs  utils.rs
types-reader-core/src/enum_case/: enum_case.rs
types-reader-core/src/params_list/: mod.rs  object_value.rs  token_object_mappers.rs  tokens_object.rs
types-reader-core/src/property_type/: property_type.rs  utils.rs
types-reader-core/src/token_stream_utils/: insert_token_before_sequence.rs
types-reader-core/src/tokens_iterator/: generics_array_token.rs  lifetime_token.rs  mod.rs  next_token.rs  peeked_token.rs  reference_token.rs  token_literal.rs  token_value.rs  tokens_reader.rs  tokens_tree_ext.rs
types-reader-core/src/tokens_object/: any_value_as_str.rs  mod.rs  number_value.rs  object_value.rs  optional_object_value.rs  token_object_mappers.rs  tokens_object.rs  value_as_ident.rs
types-reader-macros/: Cargo.toml
types-reader-macros/src/: lib.rs
types-reader-macros/src/attribute_name/: generate.rs
types-reader-macros/src/attribute_parameters/: generate.rs
types-reader-macros/src/macros_enum/: generate.rs  mod.rs  utils.rs
types-reader-macros/src/macros_parameters/: generate.rs  utils.rs
types-reader/src/: lib.rs
