[package]
name = "types-reader-macros"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
types-reader-core = { path = "../types-reader-core" }
proc-macro2 = "*"
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
